...
    <>
      { (!loading && (album ?? []).length===0 )&& <NoResultFound /> }
      <FlatList 
        data={album}
        style={{ backgroundColor: colors.black, }}
        renderItem={renderItem}
        testID={'album-list'}
        keyExtractor={(item, index) => `album-${item.album_id ?? item.id}`}
      />
    </>
  )
}

...
