...
    <FlatList 
      data={tracks}
      style={{ backgroundColor: colors.black,}}
      showsVerticalScrollIndicator={false}
      showsHorizontalScrollIndicator={false}
      renderItem={renderItem}
      testID={'track-list'}
      keyExtractor={(item, index) => `track-${item.track_id ?? item.id ?? item.entity_id}`}
      horizontal={horizontal}
    />
  )
}

...
