...
    <>
      { (!loading && (artist ?? []).length===0 )&& <NoResultFound /> }
      <FlatList 
        data={artist}
        style={{ backgroundColor: colors.black, }}
        renderItem={renderItem}
        testID={'artist-list'}
        keyExtractor={(item, index) => `artist-${item.artist_id ?? item.id}`}
      />
    </>
  )
}

...
