...
    <>
      { (!loading && (playlist ?? []).length===0 )&& <NoResultFound /> }
      <FlatList 
        data={playlist}
        style={{ backgroundColor: colors.black, }}
        renderItem={renderItem}
        testID={'play-list'}
        keyExtractor={(item, index) => `playlist-${item.playlist_id ?? item.id}`}
      />
    </>
  )
}

...
